--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <section class="section">
-        <h1 class="title">인공지능 균열위험도 판독기 V.0.9</h1>
+        <h1 class="title">인공지능 균열위험도 판독기</h1>
         <h2 class="subtitle">"자가진단을 통해 우리집이 안전한지 알아보아요."</h2>
     </section>
 
@@ -288,7 +288,7 @@
         <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
     </noscript>
 
-    <p class="text-copy">&copy; 허석재 2020. All Rights Reserved. </p>
+    <p class="text-copy">&copy; 허석재 2020. ver.1.0  All Rights Reserved. </p>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb2082d012fa18b"></script>
 
