--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+<script data-ad-client="ca-pub-9231444876987540" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <section class="section">
         <h1 class="title">인공지능 균열위험도 판독기</h1>
         <h2 class="subtitle">"자가진단을 통해 우리집이 안전한지 알아보아요."</h2>
