--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta name="title" content="우리집자가진단시스템">
     <meta name="subject" content="자가진단을 통한 안전한 주거생활">
+    <meta name="description" content="스마트폰으로 자가진단 하고 안전한 주거생활을 누리세요.">
     <meta name="keywords" content="균열, 안전">
     <meta name="author" content="허석재">
     <meta name="mail" content="mill@dankook.ac.kr">
+    <title>우리집 균열판독기</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://myhomecrackfound.netlify.app/">
     <script data-ad-client="ca-pub-9231444876987540" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
