--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <span class="
                              ">Loading...</span>
             </div>
-            <p class="text-center">AI가 당신의 사진을 분석중입니다.</p>
-
+            <p class="text-center">AI가 당신의 사진을 분석 중 입니다.</p>
+            <p class="text-center">틀릴 수도 있어요. 열심히 배우는 중 입니다.</p>
         </div>
         <p class="result-message"></p>
         <p class="result-message2"></p>
