--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@
     <noscript>Please enable JavaScript to view the
         <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
     </noscript>
+<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1iykhjpk25dfa" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 <script data-ad-client="ca-pub-9231444876987540" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <p class="text-copy">&copy; 허석재 2020.  ver.1.0.0   All Rights Reserved. </p>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
