--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 </head>
 
 <body>
-
+<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1jiflq1va94j8" 
+ data-ad-width   = "320" 
+ data-ad-height  = "50"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <section class="section">
         <h1 class="title">인공지능 균열위험도 판독기</h1>
         <h2 class="subtitle">"자가진단을 통해 우리집이 안전한지 알아보아요."</h2>
