--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="title" content="우리집자가진단시스템">
     <meta name="subject" content="자가진단을 통한 안전한 주거생활">
     <meta name="description" content="스마트폰으로 우리집에 발생한 균열을 자가진단 하고 안전한 주거생활을 누리세요.">
-    <meta name="keywords" content="균열, 안전, 지진, 하중, 크랙, 건물, 우리집, 자가진단, 인공지능, 위험도, 판독, 벽체균열, 기둥균열, 대책, 원인, 공유하기, 건축구조, 지진피해, 태풍, 재해, 안전진단">
+    <meta name="keywords" content="균열, 안전, 지진, 하중, 크랙, 건물, 우리집, 자가진단, 인공지능, 위험도, 판독, 벽체균열, 기둥균열, 대책,우리집균열, 원인, 공유하기, 건축구조, 지진피해, 태풍, 재해, 안전진단">
     <meta name="author" content="허석재">
     <meta name="mail" content="mill@dankook.ac.kr">
     <title>우리집 균열판독기</title>
