--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <section class="section">
         <h1 class="title">인공지능 균열위험도 판독기</h1>
-        <h2 class="subtitle">"자가진단을 통해 우리집이 안전한지 알아보아요."</h2>
+        <h2 class="subtitle">"자가진단을 통해 우리집이 안전한지 알아보아요.(아직 바닥은 못해요. ^ㅡ^)"</h2>
     </section>
 
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
