--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="경주, 포항, 후쿠시마, 균열, 안전, 지진, 하중, 크랙, 건물, 우리집, 자가진단, 인공지능, 위험도, 판독, 벽체균열, 기둥균열, 대책,우리집균열, 원인, 공유하기, 건축구조, 지진피해, 태풍, 재해,아파트균열,벽균열,바닥균열, 안전진단, 우리집, 균열, 탐지, 균열사진">
     <meta name="author" content="허석재">
     <meta name="mail" content="mill@dankook.ac.kr">
-    <title>우리집 균열판독기 - 인공지능으로 균열이 위험한지 알아보세요</title>
+    <title>인공지능 균열측정기 - 인공지능으로 균열이 위험한지 알아보세요</title>
     <link rel="stylesheet" href="style.css">
     <link rel="canonical" href="https://myhomecrackfound.netlify.app/">
     <script data-ad-client="ca-pub-9231444876987540" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
