--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="addthis_inline_share_toolbox" id="kakao"></div>
 
         <div class="image-title-wrap">
-            <button type="button" onclick="location.href='anchorstatus.netlify.app/';" class="remove-image">지우고 다시하기</button>
+            <button type="button" onclick="location.href='https://anchorstatus.netlify.app/';" class="remove-image">지우고 다시하기</button>
         </div>
 
     </div>
